--- a/com.Cruz.RyanVincent.Block5.Quiz/app/src/main/res/layout/activity_main.xml
+++ b/com.Cruz.RyanVincent.Block5.Quiz/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New World!"
+        android:textSize="25sp"
+        app:layout_constraintBotton_toBottonOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constrainthorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292"
+        />
+    
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
